# llvm_playground

./: CMakeLists.txt  README.md
src/: LLVMEssentials0.cc  LLVMEssentials0_main.c  LLVMEssentials1.cc
